[package]
name = "p2p-node-handshake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.33.0", features = ["full"] }
hex = "0.4.3"
rand = "0.8.5"
byteorder = "1.5.0"
speedy = "0.8.7"
sodiumoxide = "=0.2.6"
thiserror = "1.0.56"
serde_json = "1.0.111"
